--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>be.transcode</groupId>
     <artifactId>morningdeck-server</artifactId>
-    <version>1.0.0</version>
+    <version>1.1.0-SNAPSHOT</version>
     <name>Backend for Morningdeck</name>
     <description>Morningdeck is an AI driven news aggregator and dispatcher.</description>
     <url/>
