--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "morningdeck-frontend",
   "private": true,
-  "version": "1.0.0",
+  "version": "1.1.0-SNAPSHOT",
   "type": "module",
   "scripts": {
     "dev": "vite",
